// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal Default 1`] = `
<div
  className="sc-iRbamj kHmIFW"
>
  <div
    className="sc-gPEVay iwzqGY"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-jlyJG bhQyKQ"
      >
        <div
          className="sc-bwzfXH jTCciZ"
        >
          <div
            className="sc-fjdhpX jskuQK"
            role="heading"
          >
            Would you like me to be your role modal?
          </div>
          <div
            className="sc-bwzfXH ghdkBw"
          >
            <button
              className="sc-htoDjs TzVGU"
              color={undefined}
              disabled={undefined}
              icon={undefined}
              id={undefined}
              onClick={[Function]}
              title="close"
              type="button"
            >
              <span
                aria-hidden={true}
                className="sc-iwsKbI MOBcS"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "test-file-stub",
                  }
                }
                role="img"
              />
            </button>
          </div>
        </div>
        <div
          className="sc-brqgnP jEhxYZ"
        >
          <div
            className="sc-cMljjf krgCXT"
          >
            <div
              className="sc-jAaTju cirfDK"
            />
            <div
              className="sc-bwzfXH fiOUi"
            >
              <p
                className="sc-bxivhb jpexxn"
              >
                
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut mi ligula. Phasellus tellus nulla,
cursus sit amet dolor eu, sodales facilisis tortor. Maecenas sed arcu quis est pharetra molestie sed
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh.
              </p>
            </div>
            <div
              className="sc-jDwBTQ gosvOi"
            />
          </div>
        </div>
        <div
          className="sc-gZMcBi huJyDB"
        >
          <div
            className="sc-bwzfXH hWtStI"
          >
            <div
              style={
                Object {
                  "flexGrow": 1,
                }
              }
            >
              <div
                className="sc-bwzfXH KPFhn"
              >
                <div
                  className="sc-bwzfXH jHAPPC"
                >
                  <button
                    className="sc-htoDjs ilyuMW"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Activate"
                    type="button"
                  >
                    Activate
                  </button>
                </div>
                <div
                  className="sc-bwzfXH jHAPPC"
                >
                  <button
                    className="sc-htoDjs cMPsNt"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Close"
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal Without closeAction 1`] = `
<div
  className="sc-iRbamj kHmIFW"
>
  <div
    className="sc-gPEVay iwzqGY"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="sc-jlyJG bhQyKQ"
      >
        <div
          className="sc-bwzfXH jTCciZ"
        >
          <div
            className="sc-fjdhpX jskuQK"
            role="heading"
          >
            Would you like me to be your role modal?
          </div>
        </div>
        <div
          className="sc-brqgnP jEhxYZ"
        >
          <div
            className="sc-cMljjf krgCXT"
          >
            <div
              className="sc-jAaTju cirfDK"
            />
            <div
              className="sc-bwzfXH fiOUi"
            >
              <p
                className="sc-bxivhb jpexxn"
              >
                
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ut mi ligula. Phasellus tellus nulla,
cursus sit amet dolor eu, sodales facilisis tortor. Maecenas sed arcu quis est pharetra molestie sed
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh. Mauris tempor libero purus, vitae lacinia
felis hendrerit in. Vestibulum rhoncus vitae ipsum vel placerat.
eu leo. Mauris consequat mauris et eros gravida vestibulum. Phasellus convallis ipsum quis nisl lacinia,
a pulvinar est porta. Nunc tempus vulputate dapibus. In eget venenatis orci. Pellentesque habitant morbi
tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas finibus lorem et quam imperdiet,
id vestibulum odio molestie. Curabitur euismod sit amet tortor et imperdiet. Nam a nisl quis lorem porta
pharetra. Duis sed magna vel odio ullamcorper gravida eu et nibh.
              </p>
            </div>
            <div
              className="sc-jDwBTQ gosvOi"
            />
          </div>
        </div>
        <div
          className="sc-gZMcBi huJyDB"
        >
          <div
            className="sc-bwzfXH hWtStI"
          >
            <div
              style={
                Object {
                  "flexGrow": 1,
                }
              }
            >
              <div
                className="sc-bwzfXH KPFhn"
              >
                <div
                  className="sc-bwzfXH jHAPPC"
                >
                  <button
                    className="sc-htoDjs ilyuMW"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Activate"
                    type="button"
                  >
                    Activate
                  </button>
                </div>
                <div
                  className="sc-bwzfXH jHAPPC"
                >
                  <button
                    className="sc-htoDjs cMPsNt"
                    color={undefined}
                    disabled={undefined}
                    icon={undefined}
                    id={undefined}
                    onClick={[Function]}
                    title="Close"
                    type="button"
                  >
                    Close
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
